# funtrace

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.sh  fun_xray_so.S  funcount.cpp  funcount_pg.S  funtrace.cpp  funtrace.dyn  funtrace.h  funtrace_buf_size.h  funtrace_flags.h  funtrace_gdb.py  funtrace_pg.S  funtrace_pg.s  release.sh  shared.cpp  test.cpp  tests.py
compiler-wrapper/: g++
compiler-wrappers/: funtrace++  funtrace-finstr-clang++  funtrace-finstr-g++  funtrace-pg-g++  funtrace-xray-clang++
compiler-wrappers/xray/: ld
funcount2sym/: Cargo.toml
funcount2sym/src/: main.rs
funtrace2viz/: Cargo.toml
funtrace2viz/src/: main.rs
procaddr2sym/: Cargo.toml
procaddr2sym/src/: lib.rs
simple-example/: build.sh  run.sh  test.cpp
tests/: asm_filter.cpp  asm_filter_2.cpp  benchmark.cpp  buf_size.cpp  c.c  count.cpp  count_dyn_shared.cpp  count_shared.cpp  do-trace.txt  exceptions.cpp  freq.cpp  ftrace.cpp  ignore_disable.cpp  killed.cpp  lib_dyn_shared.cpp  lib_shared.cpp  longjmp.cpp  no-trace-bench.txt  no-trace.txt  orphans.cpp  shared.cpp  sigtrap.cpp  tailcall.cpp  test.h  untraced_catcher.cpp  untraced_funcs.cpp
