[package]
name = "funtrace2viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procaddr2sym = { path = "../procaddr2sym" }
bytemuck = { version="1.20.0", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "3.0", features = ["derive"] }
num = "0.4.3"
